[tool.poetry]
name = "telegram-images-bot"
version = "0.1.0"
description = ""
authors = ["Tran Viet Phuoc <phuoc.finn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
python-dotenv = "^0.18.0"
requests = "^2.25.1"
gunicorn = "^20.1.0"
pyTelegramBotAPI = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
